# stable-diffusion-webui

./: ARXIS-GPU-GUIDE.md  Iniciar-Stable-Diffusion.bat  arxis_gpu_client.py  configurar-gpu-arxis.ps1  download-models-fast.ps1  download-models.ps1  webui-user.bat
avila-diffusion/: .env  CORRECOES-FRONTEND.md  Cargo.toml  FRONTEND_COMPLETO.md  IMPLEMENTATION_SUMMARY.md  MELHORIAS_COMPLETAS.md  MELHORIAS_PROPOSTAS.md  MULTILANG.md  PROXIMOS_PASSOS.md  QUICK_WINS.md  README-COMPLETO.md  README.md  ROADMAP-PRODUCAO.md  STATUS_FINAL.md  STEVE_JOBS_FRONTEND.md  build.ps1  iniciar-avila-diffusion.ps1  rustc-ice-2025-12-09T21_12_24-13148.txt  rustc-ice-2025-12-09T21_14_20-16208.txt  rustc-ice-2025-12-09T21_15_08-26172.txt  start-app.ps1  test-api.ps1  test-multilang.ps1
avila-diffusion/frontend/: README.md  index.html
avila-diffusion/src/: clip.rs  generator.rs  history.rs  lib.rs  main.rs  native_gen.rs  pipeline.rs  safetensors_loader.rs  scheduler.rs  server.rs  server_native.rs  test_full.rs  unet.rs  vae.rs  webui_client.rs
