[package]
name = "avila-diffusion"
version = "2.0.0"
edition = "2021"
authors = ["Avila AI Team"]
description = "Gerador ultra-leve usando apenas stack Avila próprio"

[dependencies]
# SafeTensors - formato binário
safetensors = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
image = { version = "0.24", default-features = false, features = ["png"] }

[lib]
name = "avila_diffusion"
path = "src/lib.rs"

[[bin]]
name = "avila-diffusion-server"
path = "src/main.rs"

[[bin]]
name = "test-full"
path = "src/test_full.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
